--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ nav {
 }
 
 html {
-  background-color: #a6876f;
+  background-color: #ddcdbe;
   overflow-x: hidden;
   font-family: "Roboto Slab", serif;
 }
@@ -56,7 +56,7 @@ html {
 }
 
 .main {
-  background: linear-gradient(180deg, white, 90%, #a6876f, 99.9%, #a6876f);
+  background: linear-gradient(180deg, white, 90%, #ddcdbe, 99.9%, #ddcdbe);
   background-size: cover;
   height: 74ch;
 }
@@ -76,35 +76,38 @@ html {
 .main__block--text {
   max-width: 500px;
   width: 100%;
-  color: #6a3d34;
+  color: #85282a;
   font-size: 20px;
 }
-
 .nav {
   position: sticky;
   z-index: 999;
   top: 0;
   width: 100%;
-  background-color: #a6876f;
-  color: white;
+  background-color: #ddcdbe;
+  color: #85282a;
+  font-weight: 600;
   padding: 20px 0 10px;
 }
 .nav .list {
   display: flex;
   justify-content: space-between;
-  max-width: 700px;
+  max-width: 800px;
   width: 100%;
 }
 .nav .list__link {
-  padding: 5px 20px;
   border-radius: 20px;
   margin-left: 10px;
+}
+.nav .list__link a {
+  display: block;
+  padding: 5px 20px;
   font-size: 20px;
 }
 .nav .list__link:hover {
   background-color: white;
-  color: #a6876f;
-  box-shadow: 0px 0px 26px -1px #6a3d34;
+  color: #85282a;
+  box-shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.3), -4px -4px 4px 0 rgba(255, 255, 255, 0.3);
 }
 .nav .delivery {
   font-size: 30px;
@@ -128,7 +131,7 @@ html {
   justify-content: space-between;
   width: 100%;
   padding: 60px 0 10px;
-  color: white;
+  color: #85282a;
   align-items: center;
   font-size: 40px;
 }
@@ -139,7 +142,7 @@ html {
 .category__line {
   width: 100%;
   height: 4px;
-  background: white;
+  background: #85282a;
 }
 
 .box {
@@ -149,7 +152,7 @@ html {
   max-width: 280px;
   width: 100%;
   border-radius: 20px;
-  color: #a6876f;
+  color: #85282a;
   box-shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3), -8px -8px 8px 0 rgba(255, 255, 255, 0.3);
   display: flex;
   flex-direction: column;
@@ -200,7 +203,7 @@ html {
 .box__numbers span:nth-child(odd) {
   font-weight: 900;
   padding: 5px;
-  border: 2px solid #a6876f;
+  border: 2px solid #ddcdbe;
   border-radius: 50px;
   text-align: center;
   transition: 0.6s;
@@ -210,8 +213,8 @@ html {
   padding: 5px 0;
 }
 .box:hover .box__numbers--cost {
-  background-color: #a6876f;
-  color: white;
+  background-color: #ddcdbe;
+  color: #85282a;
 }
 
 .pizza__container {
@@ -223,20 +226,20 @@ html {
 .pizza .ingridients {
   padding-bottom: 100px;
   background: white;
-  color: #a6876f;
+  color: #85282a;
 }
 .pizza .ingridients .container {
   justify-content: space-around;
   flex-wrap: wrap;
 }
 .pizza .ingridients .category {
-  color: #a6876f;
+  color: #85282a;
   padding: 20px;
   margin-bottom: 20px;
 }
 .pizza .ingridients .category hr {
   max-width: 340px;
-  background-color: #a6876f;
+  background-color: #85282a;
 }
 .pizza .ingridients__box {
   display: flex;
@@ -267,7 +270,7 @@ html {
 .pizza .ingridients__box .wrapper__numbers span:nth-child(odd) {
   font-weight: 700;
   padding: 3px;
-  border: 2px solid #a6876f;
+  border: 2px solid #ddcdbe;
   border-radius: 50px;
   text-align: center;
   transition: 0.6s;
@@ -281,8 +284,8 @@ html {
   margin-left: 20px;
 }
 .pizza .ingridients__box:hover .wrapper__numbers--cost {
-  background-color: #a6876f;
-  color: white;
+  background-color: #ddcdbe;
+  color: #85282a;
 }
 
 .burger {
@@ -291,16 +294,16 @@ html {
 
 .lunch {
   background: white;
-  color: #a6876f;
+  color: #85282a;
   padding-bottom: 100px;
 }
 .lunch .category {
-  color: #a6876f;
+  color: #85282a;
   display: flex;
   flex-direction: column;
 }
 .lunch .category__line {
-  background: #a6876f;
+  background: #85282a;
 }
 .lunch__wrapper {
   width: 100%;
@@ -345,8 +348,11 @@ html {
 
 .kitchen {
   background: white;
-  color: #a6876f;
+  color: #85282a;
   padding-bottom: 100px;
+}
+.kitchen img {
+  width: 45%;
 }
 .kitchen .container {
   display: flex;
@@ -376,8 +382,8 @@ html {
   background: rgb(251, 243, 238);
 }
 .kitchen .category {
-  color: #a6876f;
+  color: #85282a;
 }
 .kitchen .category__line {
-  background: #a6876f;
+  background: #85282a;
 }/*# sourceMappingURL=main.css.map */
