--- a/sass/main.scss
+++ b/sass/main.scss
@@ -76,10 +76,10 @@ html {
     width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     text-align: center;
     &--img {
-      max-width: 500px;
+      max-width: 300px;
       width: 100%;
       margin-bottom: 50px;
       // * развлекаемся с лого
@@ -93,11 +93,11 @@ html {
       font-size: 20px;
     }
   }
-  .right {
-    img {
-      // filter: ;
-    }
-  }
+  // .right {
+  //   img {
+  //     // filter: ;
+  //   }
+  // }
 }
 //  ! .......... NAVIGATION .............
 .nav {
@@ -118,9 +118,13 @@ html {
       border-radius: 20px;
       margin-left: 10px;
       a {
-        display: block;
+        display: flex;
+        align-items: center;
         padding: 5px 20px;
         font-size: 20px;
+        i {
+          margin-right: 5px;
+        }
       }
       &:hover {
         background-color: $contrast__color;
@@ -227,7 +231,7 @@ html {
       &:nth-child(odd) {
         font-weight: 900;
         padding: 5px;
-        border: 2px solid $main__color;
+        border: 2px solid $logo__color;
         border-radius: 50px;
         text-align: center;
         transition: 0.6s;
@@ -239,12 +243,15 @@ html {
     }
   }
   &:hover .box__numbers--cost {
-    background-color: $main__color;
-    color: $logo__color;
+    background-color: $logo__color;
+    color: $contrast__color;
   }
 }
 // !.............. PIZZA ...................
 .pizza {
+  // background: url(../img/0pizza__back.png) right -500px;
+  // background-size: 90%;
+
   &__container {
     margin-bottom: 100px;
   }
@@ -296,7 +303,7 @@ html {
             &:nth-child(odd) {
               font-weight: 700;
               padding: 3px;
-              border: 2px solid $main__color;
+              border: 2px solid $logo__color;
               border-radius: 50px;
               text-align: center;
               transition: 0.6s;
@@ -313,8 +320,8 @@ html {
         margin-left: 20px;
       }
       &:hover .wrapper__numbers--cost {
-        background-color: $main__color;
-        color: $logo__color;
+        background-color: $logo__color;
+        color: $contrast__color;
       }
     }
   }
@@ -327,7 +334,6 @@ html {
 .lunch {
   background: $contrast__color;
   color: $logo__color;
-  padding-bottom: 100px;
   .category {
     color: $logo__color;
     display: flex;
@@ -366,39 +372,28 @@ html {
     }
   }
 }
-//  ! ............. DRINKS .............
-.drinks {
-  padding-bottom: 100px;
-  .box__cold {
-    max-width: 220px;
-    width: 100%;
-  }
-  &__box {
-    img {
-      align-self: center;
-      // width: 150px;
-    }
-  }
-}
 // ! ................ KITCHEN ..............
 .kitchen {
   background: $contrast__color;
   color: $logo__color;
   padding-bottom: 100px;
-  img {
+  &__man {
     width: 45%;
+    height: fit-content;
   }
   .container {
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    padding: 30px 0;
   }
-  &__title {
-    width: 100%;
-    text-align: center;
-    margin: 30px 0 20px;
+  &__wrapper {
+    width: 50%;
+    &--title {
+      text-align: center;
+    }
   }
   .item {
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
