--- a/sass/main.scss
+++ b/sass/main.scss
@@ -71,17 +71,34 @@ html {
     $main__color
   );
   background-size: cover;
-  height: 74ch;
+  padding-bottom: 100px;
+  .container {
+    position: relative;
+  }
+  &__header {
+    padding: 20px 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+      margin: 0 30px;
+    }
+    hr {
+      background-color: $logo__color;
+      height: 4px;
+      width: 100%;
+    }
+  }
   &__block {
     width: 50%;
     display: flex;
     flex-direction: column;
-    // justify-content: center;
-    text-align: center;
+    justify-content: center;
     &--img {
       max-width: 300px;
       width: 100%;
-      margin-bottom: 50px;
+      // margin-bottom: 50px;
       // * развлекаемся с лого
       // filter: hue-rotate(45deg);
       filter: sepia(0.3);
@@ -93,10 +110,17 @@ html {
       font-size: 20px;
     }
   }
-  // .right {
+  // .left {
+  //   position: relative;
   //   img {
-  //     // filter: ;
+  //     position: absolute;
+  //     top: 20px;
+  //     left: 50%;
+  //     transform: translateX(50%);
   //   }
+  // }
+  // .right {
+  //   margin: 30px 0 0px;
   // }
 }
 //  ! .......... NAVIGATION .............
@@ -411,5 +435,22 @@ html {
     &__line {
       background: $logo__color;
     }
+  }
+  .kitchen__drinks {
+    width: 33%;
+    .item {
+      &__text {
+        padding: 0;
+      }
+      span {
+        display: none;
+      }
+    }
+  }
+  .kitchen__drinks--img {
+    width: 33%;
+  }
+  .alcogol {
+    text-align: end;
   }
 }
