--- a/css/main.css
+++ b/css/main.css
@@ -356,14 +356,13 @@ html {
   color: #85282a;
   padding-bottom: 100px;
 }
+.kitchen .container {
+  display: flex;
+  padding: 30px 0;
+}
 .kitchen__man {
   width: 45%;
   height: fit-content;
-}
-.kitchen .container {
-  display: flex;
-  align-items: center;
-  padding: 30px 0;
 }
 .kitchen__wrapper {
   width: 50%;
@@ -378,12 +377,10 @@ html {
   padding: 10px 20px;
 }
 .kitchen .item__text {
-  max-width: 550px;
-  padding: 0 120px 0 0;
-  width: 100%;
+  width: 70%;
 }
 .kitchen .item span {
-  width: 150px;
+  margin-left: 10px;
   align-self: center;
 }
 .kitchen .item:hover {
@@ -395,18 +392,14 @@ html {
 .kitchen .category__line {
   background: #85282a;
 }
-.kitchen .kitchen__drinks {
+.kitchen__drinks {
+  justify-content: flex-start;
+  align-items: flex-start;
   width: 33%;
 }
-.kitchen .kitchen__drinks .item__text {
+.kitchen__drinks .item__text {
   padding: 0;
 }
-.kitchen .kitchen__drinks .item span {
-  display: none;
-}
-.kitchen .kitchen__drinks--img {
+.kitchen__drinks--img {
   width: 33%;
-}
-.kitchen .alcogol {
-  text-align: end;
 }/*# sourceMappingURL=main.css.map */
