--- a/sass/main.scss
+++ b/sass/main.scss
@@ -397,14 +397,13 @@ html {
   background: $contrast__color;
   color: $logo__color;
   padding-bottom: 100px;
+  .container {
+    display: flex;
+    padding: 30px 0;
+  }
   &__man {
     width: 45%;
     height: fit-content;
-  }
-  .container {
-    display: flex;
-    align-items: center;
-    padding: 30px 0;
   }
   &__wrapper {
     width: 50%;
@@ -412,18 +411,17 @@ html {
       text-align: center;
     }
   }
+
   .item {
     width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
     &__text {
-      max-width: 550px;
-      padding: 0 120px 0 0;
-      width: 100%;
+      width: 70%;
     }
     span {
-      width: 150px;
+      margin-left: 10px;
       align-self: center;
     }
     &:hover {
@@ -436,21 +434,17 @@ html {
       background: $logo__color;
     }
   }
-  .kitchen__drinks {
+  &__drinks {
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 33%;
     .item {
       &__text {
         padding: 0;
       }
-      span {
-        display: none;
-      }
     }
   }
-  .kitchen__drinks--img {
+  &__drinks--img {
     width: 33%;
-  }
-  .alcogol {
-    text-align: end;
   }
 }
