--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,10 @@ img {
   height: auto;
 }
 
+hr {
+  border: none;
+}
+
 button {
   border: none;
   background: transparent;
@@ -41,9 +45,10 @@ nav {
 }
 
 html {
-  background-color: #ddcdbe;
   overflow-x: hidden;
   font-family: "Roboto Slab", serif;
+  background: fixed url(../img/bg__2.webp) no-repeat;
+  background-size: 100%;
 }
 
 .container {
@@ -56,44 +61,17 @@ html {
 }
 
 .main {
-  background: linear-gradient(180deg, white, 90%, #ddcdbe, 99.9%, #ddcdbe);
-  background-size: cover;
-  padding-bottom: 100px;
+  height: 90vh;
+  padding: 20px 0 100px;
 }
 .main .container {
-  position: relative;
-}
-.main__header {
-  padding: 20px 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.main__header img {
-  margin: 0 30px;
-}
-.main__header hr {
-  background-color: #85282a;
-  height: 4px;
-  width: 100%;
-}
-.main__block {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
 }
-.main__block--img {
-  max-width: 300px;
+.main__logo {
+  max-width: 400px;
   width: 100%;
   filter: sepia(0.3);
-}
-.main__block--text {
-  max-width: 500px;
-  width: 100%;
-  color: #85282a;
-  font-size: 20px;
+  animation: appearan 1.5s 10ms ease-out;
 }
 
 .nav {
@@ -101,7 +79,7 @@ html {
   z-index: 999;
   top: 0;
   width: 100%;
-  background-color: #ddcdbe;
+  background-color: white;
   color: #85282a;
   font-weight: 600;
   padding: 20px 0 10px;
@@ -122,9 +100,7 @@ html {
   font-size: 20px;
 }
 .nav .list__link:hover {
-  background-color: white;
-  color: #85282a;
-  box-shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.3), -4px -4px 4px 0 rgba(255, 255, 255, 0.3);
+  box-shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.3), -4px -4px 4px 0 rgba(166, 165, 165, 0.3);
 }
 .nav .delivery {
   font-size: 30px;
@@ -170,7 +146,7 @@ html {
   width: 100%;
   border-radius: 20px;
   color: #85282a;
-  box-shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3), -8px -8px 8px 0 rgba(255, 255, 255, 0.3);
+  box-shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3), -8px -8px 8px 0 rgba(166, 165, 165, 0.3);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -234,6 +210,9 @@ html {
   color: white;
 }
 
+.pizza {
+  background: white;
+}
 .pizza__container {
   margin-bottom: 100px;
 }
@@ -263,7 +242,7 @@ html {
   justify-content: space-between;
   max-width: 400px;
   width: 100%;
-  box-shadow: 5px 5px 5px -1px rgba(0, 0, 0, 0.3), -3px -3px 3px -1px rgba(166, 165, 165, 0.3);
+  box-shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.3), -4px -4px 4px 0 rgba(166, 165, 165, 0.3);
   margin: 0 10px 10px;
   padding: 5px 10px;
   border-radius: 20px;
@@ -306,7 +285,8 @@ html {
 }
 
 .burger {
-  margin-bottom: 100px;
+  background: white;
+  padding-bottom: 100px;
 }
 
 .lunch {
@@ -347,9 +327,6 @@ html {
   width: 150px;
   align-self: center;
 }
-.lunch__wrapper .item:hover {
-  background: rgb(251, 243, 238);
-}
 
 .kitchen {
   background: white;
@@ -382,9 +359,6 @@ html {
 .kitchen .item span {
   margin-left: 10px;
   align-self: center;
-}
-.kitchen .item:hover {
-  background: rgb(251, 243, 238);
 }
 .kitchen .category {
   color: #85282a;
