--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ html {
   overflow-x: hidden;
   font-family: "Roboto Slab", serif;
   background: fixed url(../img/bg__3.jpg) no-repeat;
-  background-size: 100%;
+  background-size: cover;
 }
 
 .container {
@@ -58,6 +58,12 @@ html {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+
+.swiper {
+  width: 600px;
+  height: 700px;
+  display: none;
 }
 
 .main {
@@ -71,6 +77,7 @@ html {
 .main__logo {
   max-width: 400px;
   width: 100%;
+  align-self: center;
   filter: sepia(0.3);
   opacity: 0;
   animation: appearan 1.5s 100ms ease-out forwards;
@@ -89,7 +96,7 @@ html {
 .nav .list {
   display: flex;
   justify-content: space-between;
-  max-width: 800px;
+  max-width: 1000px;
   width: 100%;
 }
 .nav .list__link {
