--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ img {
 
 hr {
   border: none;
+  border-radius: 5px;
 }
 
 button {
@@ -47,7 +48,7 @@ nav {
 html {
   overflow-x: hidden;
   font-family: "Roboto Slab", serif;
-  background: fixed url(../img/bg__3.jpg) no-repeat;
+  background: fixed url(../img/bg__18.png) 0 -10vh no-repeat;
   background-size: cover;
 }
 
@@ -60,14 +61,8 @@ html {
   justify-content: space-between;
 }
 
-.swiper {
-  width: 600px;
-  height: 700px;
-  display: none;
-}
-
 .main {
-  background: linear-gradient(180deg, transparent, 90%, transparent, 98%, white);
+  background: linear-gradient(180deg, transparent, 90%, transparent, 97%, white);
   height: 90vh;
   padding: 20px 0 100px;
 }
@@ -78,7 +73,7 @@ html {
   max-width: 400px;
   width: 100%;
   align-self: center;
-  filter: sepia(0.3);
+  filter: sepia(0.1);
   opacity: 0;
   animation: appearan 1.5s 100ms ease-out forwards;
 }
@@ -89,14 +84,14 @@ html {
   top: 0;
   width: 100%;
   background-color: white;
-  color: #85282a;
+  color: #1e1e1e;
   font-weight: 600;
   padding: 20px 0 10px;
 }
 .nav .list {
   display: flex;
   justify-content: space-between;
-  max-width: 1000px;
+  max-width: 900px;
   width: 100%;
 }
 .nav .list__link {
@@ -109,7 +104,7 @@ html {
   font-size: 20px;
 }
 .nav .list__link:hover {
-  box-shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.3), -4px -4px 4px 0 rgba(166, 165, 165, 0.3);
+  box-shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.1), -4px -4px 4px 0 rgba(166, 165, 165, 0.1);
 }
 .nav .delivery {
   font-size: 30px;
@@ -133,7 +128,7 @@ html {
   justify-content: space-between;
   width: 100%;
   padding: 60px 0 10px;
-  color: #85282a;
+  color: #1e1e1e;
   align-items: center;
   font-size: 40px;
 }
@@ -144,7 +139,7 @@ html {
 .category__line {
   width: 100%;
   height: 4px;
-  background: #85282a;
+  background: #1e1e1e;
 }
 
 .box {
@@ -154,7 +149,7 @@ html {
   max-width: 280px;
   width: 100%;
   border-radius: 20px;
-  color: #85282a;
+  color: #1e1e1e;
   box-shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3), -8px -8px 8px 0 rgba(166, 165, 165, 0.3);
   display: flex;
   flex-direction: column;
@@ -173,6 +168,9 @@ html {
 .box__wrapper--title {
   width: 100%;
   margin: 10px 0 20px;
+}
+.box__wrapper--text {
+  opacity: 0.7;
 }
 .box__wrapper--new {
   position: absolute;
@@ -205,7 +203,7 @@ html {
 .box__numbers span:nth-child(odd) {
   font-weight: 900;
   padding: 5px;
-  border: 2px solid #85282a;
+  border: 2px solid #1e1e1e;
   border-radius: 50px;
   text-align: center;
   transition: 0.6s;
@@ -215,7 +213,7 @@ html {
   padding: 5px 0;
 }
 .box:hover .box__numbers--cost {
-  background-color: #85282a;
+  background-color: #1e1e1e;
   color: white;
 }
 
@@ -230,27 +228,26 @@ html {
 }
 .pizza .ingridients {
   padding-bottom: 100px;
-  color: #85282a;
+  color: #1e1e1e;
 }
 .pizza .ingridients .container {
   justify-content: space-around;
   flex-wrap: wrap;
 }
 .pizza .ingridients .category {
-  color: #85282a;
+  color: #1e1e1e;
   padding: 20px;
   margin-bottom: 20px;
 }
 .pizza .ingridients .category hr {
   max-width: 340px;
-  background-color: #85282a;
+  background-color: #1e1e1e;
 }
 .pizza .ingridients__box {
   display: flex;
   justify-content: space-between;
   max-width: 400px;
   width: 100%;
-  box-shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.3), -4px -4px 4px 0 rgba(166, 165, 165, 0.3);
   margin: 0 10px 10px;
   padding: 5px 10px;
   border-radius: 20px;
@@ -274,7 +271,7 @@ html {
 .pizza .ingridients__box .wrapper__numbers span:nth-child(odd) {
   font-weight: 700;
   padding: 3px;
-  border: 2px solid #85282a;
+  border: 2px solid #1e1e1e;
   border-radius: 50px;
   text-align: center;
   transition: 0.6s;
@@ -288,26 +285,58 @@ html {
   margin-left: 20px;
 }
 .pizza .ingridients__box:hover .wrapper__numbers--cost {
-  background-color: #85282a;
+  background-color: #1e1e1e;
   color: white;
 }
 
 .burger {
-  background: #85282a;
-  padding-bottom: 100px;
+  background: url(../img/burger__bg.png) 0 -150px no-repeat;
+  background-size: cover;
+  color: white;
+}
+.burger__wrapper {
+  margin: 60px 0;
+  background-color: #031c48;
+  padding: 0 40px 40px;
+}
+.burger .category {
+  padding: 20px 0;
+  color: white;
+}
+.burger .category hr {
+  background-color: white;
+}
+.burger .item {
+  max-width: 800px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0px;
+}
+.burger .item__text {
+  max-width: 400px;
+  width: 100%;
+}
+.burger .item__text p {
+  opacity: 0.7;
+}
+.burger .item span {
+  width: 40px;
+  text-align: right;
+  align-self: center;
+  margin-left: 15px;
 }
 
 .lunch {
   background: white;
-  color: #85282a;
+  color: #1e1e1e;
 }
 .lunch .category {
-  color: #85282a;
   display: flex;
   flex-direction: column;
 }
 .lunch .category__line {
-  background: #85282a;
+  background: #1e1e1e;
 }
 .lunch__wrapper {
   width: 100%;
@@ -330,13 +359,16 @@ html {
   max-width: 550px;
   width: 100%;
 }
+.lunch__wrapper .item__text p {
+  opacity: 0.7;
+}
 .lunch__wrapper .item span {
   align-self: center;
 }
 
 .kitchen {
   background: white;
-  color: #85282a;
+  color: #1e1e1e;
   padding-bottom: 100px;
 }
 .kitchen .container {
@@ -357,29 +389,47 @@ html {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 10px 20px;
+  padding: 10px 0px;
 }
 .kitchen .item__text {
   width: 70%;
 }
+.kitchen .item__text p {
+  opacity: 0.7;
+}
 .kitchen .item span {
+  width: 40px;
+  text-align: right;
   margin-left: 10px;
   align-self: center;
 }
-.kitchen .category {
-  color: #85282a;
+
+.drinks {
+  background: linear-gradient(180deg, rgb(255, 255, 255) 0%, transparent 10%, transparent 90%, rgb(255, 255, 255) 100%), url(../img/drinks__bg.jpg) -190px no-repeat;
+  background-size: cover;
 }
-.kitchen .category__line {
-  background: #85282a;
+.drinks .item {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0px;
 }
-.kitchen__drinks {
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 33%;
+.drinks .item__text {
+  width: 70%;
 }
-.kitchen__drinks .item__text {
-  padding: 0;
+.drinks .item__text p {
+  opacity: 0.7;
 }
-.kitchen__drinks--img {
-  width: 33%;
+.drinks .item span {
+  width: 40px;
+  text-align: right;
+  margin-left: 10px;
+  align-self: center;
+}
+.drinks__wrapper {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  padding: 0px 40px 40px 40px;
+  margin: 0 0 60px 0;
 }/*# sourceMappingURL=main.css.map */
