--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,10 @@
 @import url(./keyframes.css);
 $main__color: white;
-$text__color: #85282a;
+$text__color: #1e1e1e;
 $contrast__color: white;
 $logo__color: #85282a;
-$little__shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.3),
-  -4px -4px 4px 0 rgba(166, 165, 165, 0.3);
+$little__shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.1),
+  -4px -4px 4px 0 rgba(166, 165, 165, 0.1);
 $big__shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3),
   -8px -8px 8px 0 rgba(166, 165, 165, 0.3);
 
@@ -41,6 +41,7 @@ img {
 
 hr {
   border: none;
+  border-radius: 5px;
 }
 
 button {
@@ -61,7 +62,7 @@ nav {
 html {
   overflow-x: hidden;
   font-family: "Roboto Slab", serif;
-  background: fixed url(../img/bg__3.jpg) no-repeat;
+  background: fixed url(../img/bg__18.png) 0 -10vh no-repeat;
   background-size: cover;
 }
 
@@ -73,12 +74,6 @@ html {
   flex-wrap: wrap;
   justify-content: space-between;
 }
-
-.swiper {
-  width: 600px;
-  height: 700px;
-  display: none;
-}
 //  ! .......... MAIN ..............
 .main {
   background: linear-gradient(
@@ -86,7 +81,7 @@ html {
     transparent,
     90%,
     transparent,
-    98%,
+    97%,
     $main__color
   );
   height: 90vh;
@@ -101,7 +96,7 @@ html {
     align-self: center;
     // * развлекаемся с лого
     // filter: hue-rotate(45deg);
-    filter: sepia(0.3);
+    filter: sepia(0.1);
     opacity: 0;
     animation: appearan 1.5s 100ms ease-out forwards;
   }
@@ -119,7 +114,7 @@ html {
   .list {
     display: flex;
     justify-content: space-between;
-    max-width: 1000px;
+    max-width: 900px;
     width: 100%;
     &__link {
       border-radius: 20px;
@@ -198,6 +193,9 @@ html {
       width: 100%;
       margin: 10px 0 20px;
     }
+    &--text {
+      opacity: 0.7;
+    }
     &--new {
       position: absolute;
       top: 10px;
@@ -275,7 +273,6 @@ html {
       justify-content: space-between;
       max-width: 400px;
       width: 100%;
-      box-shadow: $little__shadow;
       margin: 0 10px 10px;
       padding: 5px 10px;
       border-radius: 20px;
@@ -320,19 +317,51 @@ html {
 }
 // ! ............. Burger ..............
 .burger {
-  background: $logo__color;
-  padding-bottom: 100px;
+  background: url(../img/burger__bg.png) 0 -150px no-repeat;
+  background-size: cover;
+  color: white;
+  &__wrapper {
+    margin: 60px 0;
+    background-color: #031c48;
+    padding: 0 40px 40px;
+  }
+  .category {
+    padding: 20px 0;
+    color: $main__color;
+    hr {
+      background-color: $main__color;
+    }
+  }
+  .item {
+    max-width: 800px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0px;
+    &__text {
+      max-width: 400px;
+      width: 100%;
+      p {
+        opacity: 0.7;
+      }
+    }
+    span {
+      width: 40px;
+      text-align: right;
+      align-self: center;
+      margin-left: 15px;
+    }
+  }
 }
 // ! .............. LUNCH .................
 .lunch {
-  background: $contrast__color;
-  color: $logo__color;
+  background: $main__color;
+  color: $text__color;
   .category {
-    color: $logo__color;
     display: flex;
     flex-direction: column;
     &__line {
-      background: $logo__color;
+      background: $text__color;
     }
   }
   &__wrapper {
@@ -353,6 +382,9 @@ html {
       &__text {
         max-width: 550px;
         width: 100%;
+        p {
+          opacity: 0.7;
+        }
       }
       span {
         align-self: center;
@@ -383,32 +415,55 @@ html {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 10px 20px;
+    padding: 10px 0px;
     &__text {
       width: 70%;
+      p {
+        opacity: 0.7;
+      }
     }
     span {
+      width: 40px;
+      text-align: right;
       margin-left: 10px;
       align-self: center;
     }
   }
-  .category {
-    color: $text__color;
-    &__line {
-      background: $text__color;
-    }
-  }
-  &__drinks {
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 33%;
-    .item {
-      &__text {
-        padding: 0;
+}
+// ! ................ DRINKS ..............
+.drinks {
+  .item {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0px;
+    &__text {
+      width: 70%;
+      p {
+        opacity: 0.7;
       }
     }
+    span {
+      width: 40px;
+      text-align: right;
+      margin-left: 10px;
+      align-self: center;
+    }
   }
-  &__drinks--img {
-    width: 33%;
+  background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255) 0%,
+      transparent 10%,
+      transparent 90%,
+      rgba(255, 255, 255) 100%
+    ),
+    url(../img/drinks__bg.jpg) -190px no-repeat;
+  background-size: cover;
+  &__wrapper {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 0px 40px 40px 40px;
+    margin: 0 0 60px 0;
   }
 }
