--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ nav {
 html {
   overflow-x: hidden;
   font-family: "Roboto Slab", serif;
-  background: fixed url(../img/bg__18.png) 0 -10vh no-repeat;
+  background: fixed url(../img/bg__18.png) 0 -10.5vh no-repeat;
   background-size: cover;
 }
 @media screen and (max-width: 786.01px) {
@@ -90,7 +90,7 @@ html {
   justify-content: center;
 }
 .main__logo {
-  max-width: 400px;
+  max-width: 500px;
   width: 100%;
   filter: sepia(0.1);
   opacity: 0;
@@ -105,63 +105,77 @@ html {
   }
 }
 
-.nav {
+.header {
   position: sticky;
   z-index: 999;
   top: 0;
   width: 100%;
   background-color: white;
-  color: #031c48;
+  color: #2c1816;
   font-weight: 600;
   padding: 20px 0 10px;
 }
-.nav .list {
+.header .container {
+  align-items: center;
+}
+.header .list {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  max-width: 900px;
-  width: 100%;
   font-size: 20px;
 }
-.nav .list__link {
+.header .list__link {
   border-radius: 20px;
   margin-left: 10px;
 }
-.nav .list__link a {
+.header .list__link a {
   display: block;
   padding: 5px 20px;
 }
-.nav .list__link:hover {
+.header .list__link:hover {
   box-shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.1), -4px -4px 4px 0 rgba(166, 165, 165, 0.1);
 }
-.nav .delivery {
+.header__icon {
+  display: flex;
+  align-items: center;
+}
+.header__icon--link {
   font-size: 30px;
   text-transform: uppercase;
-  position: relative;
 }
-.nav .delivery__link:hover {
+.header__icon--link:hover {
   text-decoration: underline;
 }
+.header__icon--inst img {
+  width: 45px;
+}
+.header__icon--map {
+  font-size: 40px;
+  margin: 0 20px;
+  padding-bottom: 8px;
+}
 @media screen and (max-width: 786.01px) {
-  .nav {
+  .header {
     padding: 5px 0;
   }
-  .nav .container {
+  .header .container {
     flex-direction: column-reverse;
   }
-  .nav .list {
+  .header .list {
     font-size: 16px;
     justify-content: space-around;
   }
-  .nav .list a {
+  .header .list a {
     padding: 2px 5px;
   }
-  .nav .delivery {
+  .header .header__icon--link {
     font-size: 20px;
-    text-align: center;
   }
-  .nav .delivery__link--caption {
-    display: none;
+  .header .header__icon--map {
+    font-size: 30px;
+  }
+  .header .header__icon--inst {
+    width: 30px;
   }
 }
 
@@ -170,7 +184,7 @@ html {
   justify-content: space-between;
   width: 100%;
   padding: 60px 0 10px;
-  color: #031c48;
+  color: #2c1816;
   align-items: center;
   font-size: 40px;
 }
@@ -181,11 +195,12 @@ html {
 .category__line {
   width: 100%;
   height: 4px;
-  background: #031c48;
+  background: #2c1816;
 }
 @media screen and (max-width: 786.01px) {
   .category {
     padding: 20px 0 10px;
+    font-size: 30px;
   }
   .category__title {
     margin: 10px;
@@ -202,7 +217,7 @@ html {
   max-width: 280px;
   width: 100%;
   border-radius: 20px;
-  color: #031c48;
+  color: #2c1816;
   box-shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3), -8px -8px 8px 0 rgba(166, 165, 165, 0.3);
   display: flex;
   flex-direction: column;
@@ -256,7 +271,7 @@ html {
 .box__numbers span:nth-child(odd) {
   font-weight: 900;
   padding: 5px;
-  border: 2px solid #031c48;
+  border: 2px solid #2c1816;
   border-radius: 50px;
   text-align: center;
   transition: 0.6s;
@@ -266,19 +281,22 @@ html {
   padding: 5px 0;
 }
 .box:hover .box__numbers--cost {
-  background-color: #031c48;
+  background-color: #2c1816;
   color: white;
 }
 
 .pizza {
   background: white;
 }
+.pizza h3 {
+  opacity: 0.9;
+}
 .pizza__container {
-  margin-bottom: 100px;
+  padding-bottom: 100px;
 }
 @media screen and (max-width: 786.01px) {
   .pizza__container {
-    margin-bottom: 0px;
+    padding-bottom: 0px;
   }
 }
 .pizza__box:hover .box__wrapper--img {
@@ -286,20 +304,20 @@ html {
 }
 .pizza .ingridients {
   padding-bottom: 100px;
-  color: #031c48;
+  color: #2c1816;
 }
 .pizza .ingridients .container {
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 .pizza .ingridients .category {
-  color: #031c48;
+  color: #2c1816;
   padding: 20px;
   margin-bottom: 20px;
 }
 .pizza .ingridients .category hr {
   max-width: 340px;
-  background-color: #031c48;
+  background-color: #2c1816;
 }
 .pizza .ingridients__box {
   display: flex;
@@ -329,7 +347,7 @@ html {
 .pizza .ingridients__box .wrapper__numbers span:nth-child(odd) {
   font-weight: 700;
   padding: 3px;
-  border: 2px solid #031c48;
+  border: 2px solid #2c1816;
   border-radius: 50px;
   text-align: center;
   transition: 0.6s;
@@ -343,7 +361,7 @@ html {
   margin-left: 20px;
 }
 .pizza .ingridients__box:hover .wrapper__numbers--cost {
-  background-color: #031c48;
+  background-color: #2c1816;
   color: white;
 }
 
@@ -362,6 +380,9 @@ html {
   text-align: right;
   margin-left: 10px;
   align-self: center;
+}
+.item span:nth-child(2n+1) {
+  font-weight: 700;
 }
 @media screen and (max-width: 786.01px) {
   .item {
@@ -402,15 +423,16 @@ html {
 }
 
 .lunch {
+  padding: 40px 0;
   background: white;
-  color: #031c48;
+  color: #2c1816;
 }
 .lunch .category {
   display: flex;
   flex-direction: column;
 }
 .lunch .category__line {
-  background: #031c48;
+  background: #2c1816;
 }
 .lunch__wrapper {
   width: 100%;
@@ -425,7 +447,7 @@ html {
 
 .kitchen {
   background: white;
-  color: #031c48;
+  color: #2c1816;
   padding-bottom: 100px;
 }
 .kitchen .container {
@@ -474,6 +496,7 @@ html {
   background-size: cover;
 }
 .drinks__wrapper {
+  color: #2c1816;
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -487,7 +510,217 @@ html {
   .drinks__wrapper {
     width: 100%;
     padding: 0;
-    margin: 0;
+    margin: 0 0 40px;
     background-color: rgba(255, 255, 255, 0.686);
   }
+}
+
+.delivery {
+  padding: 70px 0;
+  background-color: white;
+}
+.delivery .category {
+  padding-top: 0;
+}
+.delivery__description li {
+  margin: 20px 0;
+  font-size: 20px;
+  font-weight: 700;
+}
+.delivery__description span {
+  color: red;
+}
+.delivery__description--btn {
+  display: block;
+  padding: 20px 10px;
+  border-radius: 20px;
+  background-color: #031c48;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+}
+.delivery iframe {
+  border-radius: 20px;
+  border: 4px solid #031c48;
+  max-width: 800px;
+  width: 100%;
+  height: 600px;
+}
+@media screen and (max-width: 786.01px) {
+  .delivery {
+    padding: 40px 10px;
+  }
+  .delivery .container {
+    flex-direction: column-reverse;
+  }
+  .delivery iframe {
+    margin-top: 20px;
+  }
+}
+
+.party {
+  background-color: white;
+  padding: 60px;
+}
+.party .category {
+  padding-top: 0;
+}
+.party .description {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.party .description a {
+  display: block;
+  padding: 20px 15px;
+  border-radius: 20px;
+  background-color: #031c48;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 40px;
+}
+.party ul {
+  font-size: 30px;
+}
+.party ul li {
+  margin: 20px 0;
+  list-style-type: disc;
+}
+.party img {
+  width: 50%;
+  border-radius: 20px;
+}
+@media screen and (max-width: 786.01px) {
+  .party {
+    padding: 0;
+  }
+  .party .description {
+    padding: 40px 0px;
+    background: rgba(255, 255, 255, 0.6);
+  }
+  .party .container {
+    background: url(../img/party.JPG) no-repeat;
+    background-size: cover;
+  }
+  .party ul {
+    font-size: 20px;
+  }
+  .party img {
+    display: none;
+  }
+}
+
+footer {
+  background-color: #031c48;
+  color: white;
+  font-size: 20px;
+}
+footer .container {
+  padding: 60px 0;
+}
+footer iframe {
+  border-radius: 20px;
+  border: 2px white solid;
+  width: 700px;
+  height: 400px;
+}
+footer .aside {
+  width: 40%;
+  text-align: left;
+}
+footer .aside h2 {
+  font-size: 30px;
+  margin-bottom: 40px;
+}
+footer .aside ul {
+  margin-bottom: 60px;
+}
+footer .aside ul li {
+  margin-bottom: 20px;
+  max-width: 220px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+footer .aside ul li a {
+  display: flex;
+  align-items: center;
+}
+footer .aside ul li a i {
+  font-size: 30px;
+  margin-right: 10px;
+  width: 35px;
+}
+footer .aside ul li a:hover {
+  font-weight: 900;
+}
+footer .signatyre {
+  font-size: 15px;
+  padding: 17px;
+  background-color: black;
+  width: 100%;
+  text-align: center;
+  opacity: 0.3;
+  font-weight: 200;
+}
+footer .signatyre a:hover {
+  text-decoration: underline;
+}
+footer .signatyre p {
+  display: none;
+}
+@media screen and (max-width: 786.01px) {
+  footer iframe {
+    width: 100%;
+  }
+  footer .aside {
+    width: 100%;
+    padding: 40px 10px 0 40px;
+  }
+  footer .aside ul {
+    margin-bottom: 20px;
+  }
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1050;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.modal .modal__dialog {
+  max-width: 500px;
+  margin: 40px auto;
+}
+.modal .modal__content {
+  position: relative;
+  width: 100%;
+  padding: 40px;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  max-height: 80vh;
+  overflow-y: auto;
+}
+.modal .modal__close {
+  position: absolute;
+  top: 8px;
+  right: 14px;
+  font-size: 30px;
+  color: #000;
+  opacity: 0.5;
+  font-weight: 700;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.show {
+  display: block;
 }/*# sourceMappingURL=main.css.map */
