--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,13 +7,6 @@ $little__shadow: 6px 6px 6px 0 rgba(0, 0, 0, 0.1),
 $big__shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3),
   -8px -8px 8px 0 rgba(166, 165, 165, 0.3);
 
-// TODO different bg on pc & phone
-// Todo sale 10% oт pizza 
-// todo footer
-// todo delivery
-// todo party
-// TODO ADAPTATION HEADER
-
 * {
   padding: 0;
   margin: 0;
@@ -70,7 +63,7 @@ nav {
 html {
   overflow-x: hidden;
   font-family: "Roboto Slab", serif;
-  background: fixed url(../img/bg__18.png) 0 -10.5vh no-repeat;
+  background: fixed url(../img/bg__18.png) 0 -10vh no-repeat;
   background-size: cover;
   @media screen and (max-width: 786.01px) {
     background-position-x: -600px;
@@ -99,7 +92,7 @@ html {
     97%,
     $main__color
   );
-  height: 88vh;
+  height: 90vh;
   padding: 20px 0 100px;
   .container {
     justify-content: center;
@@ -128,9 +121,9 @@ html {
   background-color: $main__color;
   color: $text__color;
   font-weight: 600;
-  padding: 20px 0 10px;
   .container {
     align-items: center;
+    height: 10vh;
   }
   .list {
     display: flex;
@@ -200,13 +193,26 @@ html {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 60px 0 10px;
+  padding: 78px 0 10px;
   color: $text__color;
   align-items: center;
   font-size: 40px;
   &__title {
     text-align: center;
     margin: 0 50px;
+    position: relative;
+    &--sticer{
+      position: absolute;
+      top: 23%;
+      right: -270px;
+      color: red;
+      font-weight: 500;
+      font-size: 28px;
+      width: 100%;
+      text-transform: uppercase;
+      background-color: $main__color;
+      transform: rotate(20deg);
+    }
   }
   &__line {
     width: 100%;
@@ -220,6 +226,12 @@ html {
       margin: 10px;
       i {
         margin-right: 5px;
+      }
+      &--sticer{
+        font-size: 20px;  
+        top: -6%;
+        right: 88px;    
+        transform: rotate(10deg);
       }
     }
   }
@@ -433,11 +445,11 @@ html {
 }
 // ! .............. LUNCH .................
 .lunch {
-  padding: 40px 0;
   background: $main__color;
   color: $text__color;
   .category {
     display: flex;
+    padding: 20px 0 0;
     flex-direction: column;
     &__line {
       background: $text__color;
@@ -456,12 +468,11 @@ html {
 }
 // ! ................ KITCHEN ..............
 .kitchen {
-  // display: none;
   background: $main__color;
   color: $text__color;
   padding-bottom: 100px;
-  .container {
-    padding: 30px 0;
+  .category{
+    padding: 0;
   }
   &__man {
     width: 45%;
@@ -530,7 +541,7 @@ html {
 }
 // ! ................Delivery .................
 .delivery{
-  padding: 70px 0;
+  padding: 40px 0;
   background-color: $main__color;
   .category{
     padding-top: 0;
@@ -574,7 +585,6 @@ html {
 // ! ................Party..............
 .party{
   background-color: $main__color;
-  padding: 60px;
   .category{
     padding-top: 0;
   }
