--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url(./keyframes.css);
+@import url(./preloader.css);
 * {
   padding: 0;
   margin: 0;
@@ -81,6 +82,28 @@ html {
   }
 }
 
+.ivent {
+  text-transform: uppercase;
+  display: none;
+  position: fixed;
+  bottom: 0px;
+  z-index: 99;
+  right: 30px;
+  padding: 10px 30px;
+  font-size: 20px;
+  font-weight: 900;
+  background-color: white;
+  color: red;
+  border-radius: 20px 20px 0 0;
+  box-shadow: 12px 12px 12px 0 rgba(0, 0, 0, 0.3), -8px -8px 8px 0 rgba(166, 165, 165, 0.3);
+  cursor: pointer;
+}
+@media screen and (max-width: 786.01px) {
+  .ivent {
+    font-size: 16px;
+  }
+}
+
 .main {
   background: linear-gradient(180deg, transparent, 90%, transparent, 97%, white);
   height: 90vh;
@@ -107,7 +130,7 @@ html {
 
 .header {
   position: sticky;
-  z-index: 999;
+  z-index: 9;
   top: 0;
   width: 100%;
   background-color: white;
@@ -148,11 +171,7 @@ html {
 }
 .header__icon--inst img {
   width: 45px;
-}
-.header__icon--map {
-  font-size: 40px;
   margin: 0 20px;
-  padding-bottom: 8px;
 }
 @media screen and (max-width: 786.01px) {
   .header {
@@ -160,9 +179,10 @@ html {
   }
   .header .container {
     flex-direction: column-reverse;
+    height: auto;
   }
   .header .list {
-    font-size: 16px;
+    font-size: 14px;
     justify-content: space-around;
   }
   .header .list a {
@@ -170,9 +190,6 @@ html {
   }
   .header .header__icon--link {
     font-size: 20px;
-  }
-  .header .header__icon--map {
-    font-size: 30px;
   }
   .header .header__icon--inst {
     width: 30px;
@@ -198,7 +215,7 @@ html {
   top: 23%;
   right: -270px;
   color: red;
-  font-weight: 500;
+  font-weight: 900;
   font-size: 28px;
   width: 100%;
   text-transform: uppercase;
@@ -541,17 +558,29 @@ html {
 .delivery .category {
   padding-top: 0;
 }
-.delivery__description li {
+.delivery .description li {
   margin: 20px 0;
   font-size: 20px;
   font-weight: 700;
 }
-.delivery__description span {
+.delivery .description span {
   color: red;
 }
-.delivery__description--btn {
+.delivery .description__timetable li:first-child {
+  padding-left: 0;
+}
+.delivery .description__timetable li {
+  padding-left: 30px;
+  margin: 10px 0;
+  max-width: 230px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.delivery .description--btn {
   display: block;
   padding: 20px 10px;
+  margin-top: 40px;
   border-radius: 20px;
   background-color: #031c48;
   color: white;
@@ -565,12 +594,28 @@ html {
   width: 100%;
   height: 600px;
 }
+.delivery__terms {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  text-align: center;
+  padding: 40px 0;
+  font-size: 20px;
+}
+.delivery__terms li {
+  list-style-type: disc;
+  text-align: start;
+  max-width: 600px;
+  width: 100%;
+  padding: 10px 5px;
+  opacity: 0.8;
+}
+.delivery__terms li span {
+  color: red;
+}
 @media screen and (max-width: 786.01px) {
   .delivery {
     padding: 40px 10px;
-  }
-  .delivery .container {
-    flex-direction: column-reverse;
   }
   .delivery iframe {
     margin-top: 20px;
@@ -579,6 +624,7 @@ html {
 
 .party {
   background-color: white;
+  padding-bottom: 40px;
 }
 .party .category {
   padding-top: 0;
@@ -685,9 +731,6 @@ footer .signatyre {
 footer .signatyre a:hover {
   text-decoration: underline;
 }
-footer .signatyre p {
-  display: none;
-}
 @media screen and (max-width: 786.01px) {
   footer iframe {
     width: 100%;
@@ -705,7 +748,7 @@ footer .signatyre p {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1050;
+  z-index: 999;
   display: none;
   width: 100%;
   height: 100%;
