--- a/sass/main.scss
+++ b/sass/main.scss
@@ -116,20 +116,20 @@ html {
     $main__color
   );
   height: 90vh;
-  padding: 20px 0 100px;
+  padding: 20px 0 0;
   .container {
     justify-content: center;
   }
   &__logo {
     max-width: 500px;
     width: 100%;
-    filter: sepia(0.1);
     opacity: 0;
-    animation: appearan 1.5s 100ms ease-out forwards;
+  }
+  .animated__logo{    
+    animation: appearan 1.5s 150ms ease-out forwards;
   }
   @media screen and (max-width: 786.01px) {
-    height: 85vh;
-    
+    height: 85vh;    
     &__logo {
       padding: 0 5px;
     }
