--- a/css/main.css
+++ b/css/main.css
@@ -555,7 +555,7 @@ html {
 }
 
 .drinks {
-  background: linear-gradient(180deg, rgb(255, 255, 255) 0%, transparent 10%, transparent 90%, rgb(255, 255, 255) 100%), url(../img/drinks__bg.jpg) -190px no-repeat;
+  background: linear-gradient(180deg, rgb(255, 255, 255) 0%, transparent 10%, transparent 90%, rgb(255, 255, 255) 100%), url(../img/drinks__bg.jpg) -190px no-repeat, white;
   background-size: cover;
 }
 .drinks__wrapper {
@@ -808,4 +808,8 @@ footer .signatyre a:hover {
 
 .show {
   display: block;
+}
+
+.hidden {
+  overflow: hidden;
 }/*# sourceMappingURL=main.css.map */
